# gemm

./: .ccls  .clang-tidy  .clangd  .clangd-ci  .env  .gitignore  README.md  benchmark.sh  clang-format.sh  clang-tidy.sh  clangd-tidy-ci.sh  clangd-tidy.sh  compose.yml  plots.ipynb
.devcontainer/: Dockerfile
.github/workflows/: main.yml
.ide/: Dockerfile
.jupyter/: Dockerfile
.runner/: Dockerfile  start.sh
gemm/: CMakeLists.txt  __init__.py
gemm/include/: Gemm.h  Gemm.hpp  Matrix.h  MatrixMult.h  kernels.cuh  utils.cuh
gemm/src/: Gemm.cpp  GemmCuBlas.cpp  GemmCuda.cpp  GemmMKL.cpp  GemmMkl.cpp  GemmNaive.cpp  Matrix.cpp  Matrix.cu  MatrixMult.cpp  MatrixMultCuBLAS.cpp  kernels.cu  main.cpp  results.py  utils.cu
gemm/tests/: CMakeLists.txt  bGemm.cpp  bGemmSweep.cpp  bMatrix.cpp  bMatrixMult.cpp  tCuda.cpp  tGemm.cpp  tMatrix.cpp  tMatrixMult.cpp  test_kernels.cu  test_results.py
